(wip) prototype for note

--- a/src/app/pages/note/note.html
+++ b/src/app/pages/note/note.html
@@ -1,1 +1,50 @@
-<p>note works!</p>
+<div class="h-screen w-screen bg-gray-100 text-sm">
+  <div class="grid grid-cols-4 gap-8 p-10">
+    <div class="bg-white rounded-sm p-4 gap-2 flex flex-col">
+      <div class="flex justify-between border-black border-b-1 items-center">
+        <h1
+          class="font-semibold text-lg w-40 truncate relative w-40 overflow-hidden hover:overflow-auto hover:whitespace-nowrap"
+        >
+          This is a really long title
+        </h1>
+        <div>8/8, 10:30</div>
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+        risus lacus, gravida non interdum vel, cursus in odio. Nam accumsan
+        fermentum velit ac mollis. Sed hendrerit pulvinar dui, vitae interdum
+        sem posuere at. Nunc lobortis tellus tortor, at mattis eros laoreet et.
+        Etiam in porta nulla. Phasellus viverra in massa sit amet mattis. Sed et
+        diam dolor.
+      </div>
+    </div>
+    <div class="bg-white rounded-sm p-4">
+      <div class="flex justify-between">
+        <div>Title</div>
+        <div>August 8, 10:30</div>
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+        risus lacus, gravida non interdum vel, cursus in odio. Nam accumsan
+        fermentum velit ac mollis. Sed hendrerit pulvinar dui, vitae interdum
+        sem posuere at. Nunc lobortis tellus tortor, at mattis eros laoreet et.
+        Etiam in porta nulla. Phasellus viverra in massa sit amet mattis. Sed et
+        diam dolor.
+      </div>
+    </div>
+    <div class="bg-white rounded-sm p-4">
+      <div class="flex justify-between">
+        <div>Title</div>
+        <div>August 8, 10:30</div>
+      </div>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+        risus lacus, gravida non interdum vel, cursus in odio. Nam accumsan
+        fermentum velit ac mollis. Sed hendrerit pulvinar dui, vitae interdum
+        sem posuere at. Nunc lobortis tellus tortor, at mattis eros laoreet et.
+        Etiam in porta nulla. Phasellus viverra in massa sit amet mattis. Sed et
+        diam dolor.
+      </div>
+    </div>
+  </div>
+</div>
