(wip) prototype for note

--- a/src/app/pages/note/note.html
+++ b/src/app/pages/note/note.html
@@ -1,15 +1,17 @@
 <div class="h-screen w-screen bg-gray-100 text-sm">
   <div class="grid grid-cols-4 gap-8 p-10">
     <div class="bg-white rounded-sm p-4 gap-2 flex flex-col">
-      <div class="flex justify-between border-black border-b-1 items-center">
-        <h1
-          class="font-semibold text-lg w-40 truncate relative w-40 overflow-hidden hover:overflow-auto hover:whitespace-nowrap"
-        >
+      <div
+        class="flex justify-between border-black border-b-1 items-center pb-2"
+      >
+        <h1 class="font-semibold text-lg w-40 truncate w-40">
           This is a really long title
         </h1>
-        <div>8/8, 10:30</div>
+        <div class="flex flex-col justify-end">
+          <span>8/8</span><span>10:30</span>
+        </div>
       </div>
-      <div>
+      <div class="h-50 overflow-auto">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
         risus lacus, gravida non interdum vel, cursus in odio. Nam accumsan
         fermentum velit ac mollis. Sed hendrerit pulvinar dui, vitae interdum
