--- a/src/app/component/modal/modal.html
+++ b/src/app/component/modal/modal.html
@@ -1,5 +1,5 @@
 <div
-  class="fixed inset-0 flex items-center justify-center bg-black/50 cursor-pointer"
+  class="fixed inset-0 flex items-center justify-center bg-black/50 cursor-pointer z-99"
   (click)="modalService.close()"
 >
   <div
