--- a/src/app/page/note-page/note-page.html
+++ b/src/app/page/note-page/note-page.html
@@ -17,7 +17,7 @@
 }
 <div class="text-xs lg:text-sm bg-gray-100 min-h-screen min-w-screen p-1">
   <app-toolbar (sort)="sortData($event)"></app-toolbar>
-  @if (notes() || notes().length > 0) {
+  @if (notes().length > 0) {
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 px-10 gap-4">
     @for (note of notes(); track note.id) {
     <app-note-card
